--- a/src/motoman_moveit_config_motomini/config/joint_limits.yaml
+++ b/src/motoman_moveit_config_motomini/config/joint_limits.yaml
@@ -2,6 +2,16 @@
 # Specific joint properties can be changed with the keys [max_position, min_position, max_velocity, max_acceleration]
 # Joint limits can be turned off with [has_velocity_limits, has_acceleration_limits]
 joint_limits:
+  gripper_finger_joint_l:
+    has_velocity_limits: true
+    max_velocity: 0.1
+    has_acceleration_limits: false
+    max_acceleration: 0
+  gripper_finger_joint_r:
+    has_velocity_limits: true
+    max_velocity: 0.1
+    has_acceleration_limits: false
+    max_acceleration: 0
   joint_1_s:
     has_velocity_limits: true
     max_velocity: 5.4977
