--- a/src/motoman_moveit_config_motomini/config/ompl_planning.yaml
+++ b/src/motoman_moveit_config_motomini/config/ompl_planning.yaml
@@ -148,3 +148,29 @@ motomini:
     - SPARStwo
   projection_evaluator: joints(joint_1_s,joint_2_l)
   longest_valid_segment_fraction: 0.005
+gripper:
+  default_planner_config: ""
+  planner_configs:
+    - SBL
+    - EST
+    - LBKPIECE
+    - BKPIECE
+    - KPIECE
+    - RRT
+    - RRTConnect
+    - RRTstar
+    - TRRT
+    - PRM
+    - PRMstar
+    - FMT
+    - BFMT
+    - PDST
+    - STRIDE
+    - BiTRRT
+    - LBTRRT
+    - BiEST
+    - ProjEST
+    - LazyPRM
+    - LazyPRMstar
+    - SPARS
+    - SPARStwo
