--- a/src/motoman_moveit/motoman_moveit_config_motomini/config/joint_limits.yaml
+++ b/src/motoman_moveit/motoman_moveit_config_motomini/config/joint_limits.yaml
@@ -18,32 +18,32 @@ joint_limits:
     has_acceleration_limits: false
     max_acceleration: 0
   joint_1_s:
-    has_velocity_limits: false
-    max_velocity: 55.4977
+    has_velocity_limits: true
+    max_velocity: 5.4977
     has_acceleration_limits: false
     max_acceleration: 0
   joint_2_l:
-    has_velocity_limits: false
-    max_velocity: 55.4977
+    has_velocity_limits: true
+    max_velocity: 5.4977
     has_acceleration_limits: false
     max_acceleration: 0
   joint_3_u:
-    has_velocity_limits: false
-    max_velocity: 57.3304
+    has_velocity_limits: true
+    max_velocity: 7.3304
     has_acceleration_limits: false
     max_acceleration: 0
   joint_4_r:
-    has_velocity_limits: false
-    max_velocity: 50.4719
+    has_velocity_limits: true
+    max_velocity: 10.4719
     has_acceleration_limits: false
     max_acceleration: 0
   joint_5_b:
-    has_velocity_limits: false
-    max_velocity: 50.4719
+    has_velocity_limits: true
+    max_velocity: 10.4719
     has_acceleration_limits: false
     max_acceleration: 0
   joint_6_t:
-    has_velocity_limits: false
+    has_velocity_limits: true
     max_velocity: 10.4719
     has_acceleration_limits: false
     max_acceleration: 0
